--- a/public/angular_app/bower.json
+++ b/public/angular_app/bower.json
@@ -10,7 +10,8 @@
     "angular-resource": "1.2.16",
     "angular-cookies": "1.2.16",
     "angular-sanitize": "1.2.16",
-    "angular-route": "1.2.16"
+    "angular-route": "1.2.16",
+    "ng-Fx": "~0.3.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
